--- a/prize/index.html
+++ b/prize/index.html
@@ -90,16 +90,7 @@
 			prize_name: '',
 			prize_length: '',
 			title_name: '',
-			users: ['可怕的小耗子', 'ASD力量', '夜麻麻出街尸阿烂屎', '0不如回家去养猪0', '相知92376', '用户9988158056', '火火里同学', 'IrenezQAQ', 'IMP的粉',
-				'猪圈里的帅猪', '陪腻度过漫长岁月', '怡宝20954', 'Miracles02', 'Da副', '迈妮', '冠绝天下的猪', '红油皮蛋南瓜粥', '用户270356273', '5520ca',
-				'0不如回家去养猪0', 'alansdennyc', '始于初见123止于终老', '大大大大的delevin', '用户82657819', '松124567', '卑鄙小建', '浮世万仟', '用户43411197',
-				'地球球球球', '动心忍性333', '实名制上网冲浪', '枯叶灵风', '0不如回家去养猪0', '别问问就多余', '用户8821971696', '老师的菊花眼', 'Kevin513727', '司机小杨',
-				'冰岛塞拉斯', '风儿丶吹啊吹', '用户77137188', '是这样的啊1', '床起不了一点', '主播最帅快回答我问题', '雲遊小豬皮', '柠乐大傻妞', 'alansdennyc', '0不如回家去养猪0',
-				'可可的小千梵', 'BIAO子必须死', '宝塔镇大猫62731', '自闭的小记忆', '小贼OvO', '小不点儿的文子', '丶浅念丶', '摆烂综合体', '0不如回家去养猪0', 'i张他K', '璀璨星光1',
-				'快乐冒菜', 'Wiokiz', '头发的事先放一边', '请喊我弟弟', 'GiuseppeRossi47', '呜呜呜221', '我来看不用流量', 'HUIMEILI', 'jokel123',
-				'孤寂而漫长的人生', '微微一点很销魂', '凉薄先生丷', '0不如回家去养猪0', 'alansdennyc', '别莱无样', 'tmerlim', '八神和嘉儿', '今天上班了吗', '0不如回家去养猪0',
-				'Alan无法度', '极地儒雅家', '喜欢爱演的吗喽', '用户43411197', 'sosomelon', '你斗筆嗎'
-			],
+			users: [],
 			dialogVisible: false,
 			prize_users: [],
 
