--- a/prize/index.html
+++ b/prize/index.html
@@ -23,7 +23,7 @@
 			<el-divider></el-divider>
 			<el-input v-model="add_user" placeholder="手动添加用户(回车键确认)" @keyup.enter.native="addUser"></el-input>
 			<div id="prize-users">
-				<el-tag v-for="user in users" closable @close="deleteUser(user)">
+				<el-tag v-for="user in users" closable @close="deleteUser(user)" :disable-transitions="true">
 					<span v-text="user"></span>
 				</el-tag>
 			</div>
@@ -40,10 +40,10 @@
 				<el-input v-model="prize_length" id="prize_length" placeholder="请输入中奖人数"></el-input>
 				<el-button type="success" @click="dialogVisible=true">开始抽奖</el-button>
 			</div>
+			<el-divider></el-divider>
 
-
-			<el-dialog :visible.sync="dialogVisible" :fullscreen="true"
-			 :close-on-press-escape="false" :close-on-click-modal="false" :before-close="handleClose">
+			<el-dialog :visible.sync="dialogVisible" :fullscreen="true" :close-on-press-escape="false" :close-on-click-modal="false"
+			 :before-close="handleClose">
 				<div id="dialog-tip" class="dialog-tip" v-show="!prize_lock">按下空格开始\停止抽奖</div>
 				<div id="prizeed-users" v-show="prize_lock">
 					<p class="prizeed-title" v-html="formatTitle(title_name)"></p>
@@ -59,7 +59,7 @@
 </html>
 
 <script type="text/javascript">
-	function getUrlParams() {
+	const getUrlParams = () => {
 		const urlSearchParams = new URLSearchParams(window.location.search);
 		const params = Object.fromEntries(urlSearchParams.entries());
 		return params;
@@ -95,11 +95,14 @@
 			title_name: '',
 			users: [],
 			dialogVisible: false,
-			prize_users: [],
+			prize_users: []
 		},
 		mounted() {
 			setTimeout(() => {
-				app.room_id = getUrlParams().room_id;;
+				app.room_id = getUrlParams().room_id;
+				app.prize_name = localStorage.getItem('prize_name') ? localStorage.getItem('prize_name') : '';
+				app.prize_length = localStorage.getItem('prize_length') ? localStorage.getItem('prize_length') : '';
+				app.title_name = localStorage.getItem('title_name') ? localStorage.getItem('title_name') : '';
 			}, 0);
 		},
 		methods: {
@@ -108,20 +111,29 @@
 				if (app.ws_lock) {
 					new Ex_WebSocket_UnLogin(app.room_id, (msg) => {
 						if (msg.startsWith('type@=chatmsg')) {
-							msg.split('/').forEach(m => {
-								console.log(m.startsWith('nn@=') && !app.users.includes(m.split('=')[1]))
-								if (m.startsWith('nn@=') && !app.users.includes(m.split('=')[1]) && app.ws_lock) {
-									app.users.push(m.split('=')[1]);
-								}
-							});
+							console.log(msg)
+							handleMsg(msg);
 						}
 					});
 				}
-
+				const handleMsg = (user) => {
+					if (!app.ws_lock) {
+						return false;
+					}
+					let name;
+					user.split('/').forEach(m => {
+						if (m.startsWith('nn@=')) {
+							name = m.split('=')[1];
+						}
+					});
+					if (!app.users.includes(name)) {
+						app.users.push(name);
+					}
+				}
 			},
 			addUser() {
 				if (!app.users.includes(app.add_user)) {
-					app.users.push(app.add_user);
+					app.users.push(app.add_user.trim());
 				}
 				app.add_user = '';
 			},
@@ -153,12 +165,17 @@
 					}
 					app.prize_users = shuffledArray.slice(0, app.prize_length);
 				}, 20);
+
+
+				localStorage.setItem('prize_name', app.prize_name);
+				localStorage.setItem('prize_length', app.prize_length);
+				localStorage.setItem('title_name', app.title_name);
 			},
 			doPrizeDone() {
 				clearInterval(interval);
 			},
-			formatTitle(title){
-				return title.replaceAll('|','<br>');
+			formatTitle(title) {
+				return title.replaceAll('|', '<br>');
 			}
 		}
 	});
