--- a/header/index.html
+++ b/header/index.html
@@ -50,7 +50,7 @@
 <style type="text/css">
 	@font-face {
 		font-family: font;
-		src: url('http://tsanger.cn/download/%E4%BB%93%E8%80%B3%E6%B8%94%E9%98%B3%E4%BD%93W04.ttf') format('truetype');
+		src: url('font.ttf') format('truetype');
 	}
 
 	body {
